# dacha-na-udachu-website

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
app/: config.py  forms.py  main.py  populate_house_db.py
app/static/css/: main.css  navbar.css
app/static/js/: rent-form.js
app/templates/: about.html  booking.html  events.html  main.html
app/templates/booking/: ded_house.html  main_house.html
app/templates/events/: dacha_party.html
migrations/versions/: 9503513bc4ff_.py  9d10f4dceff1_.py  b2edd7b22b75_tables.py
